--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         "sensio/framework-extra-bundle":    "*",
         "doctrine/doctrine-bundle":         "*",
         "doctrine/orm":                     "*",
-        "symfony/assetic-bundle":            "dev-master"
+        "symfony/assetic-bundle":           "dev-master",
+        "exercise/htmlpurifier-bundle":     "dev-master"
     },
 
     "require-dev": {
